# BigFileReverse

./: CMakeLists.txt  README.md  main.cpp
DataProvider/: IDataProvider.h  MmapDataProvider.cpp  MmapDataProvider.h  StreamDataProvider.cpp  StreamDataProvider.h
EncodingFixer/: Big5EncodingFixer.cpp  Big5EncodingFixer.h  IEncodingFixer.h
FileReverser/: Big5FileReverser.cpp  Big5FileReverser.h  FileReverser.cpp  FileReverser.h  IFileReverser.h
